# acquire-driver-common

./: CHANGELOG.md
.github/workflows/: release.yml
src/: CMakeLists.txt  basics.driver.c  identifiers.h
src/filters/: CMakeLists.txt  basic.filter.c  basic.filter.h  frame_average.cpp
src/simcams/: simulated.camera.c
src/storage/: tiff.cpp
tests/devkit/: storage-get-meta.cpp
